# IRAI

./: .gitignore  README.md  pyproject.toml
config/: device.yaml  models.yaml
docs/: use_cases.md
prompts/: rag_preprompt.md  system_prompt.md  user_prompt_template.md
src/: __init__.py  config.py  device.py  knowledge.py  llm.py  main.py  prompts.py  stt.py  tts.py  wake_word.py
